[package]
name = "fastwebsockets"
description = "A fast RFC6455 WebSocket server implementation"
version = "0.5.0"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/denoland/fastwebsockets"

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
required-features = ["upgrade"]

[[example]]
name = "autobahn_client"
path = "examples/autobahn_client.rs"
required-features = ["upgrade"]

[[example]]
name = "tls_client"
path = "examples/tls_client.rs"
required-features = ["upgrade"]

[dependencies]
tokio = { version = "1.34",  default-features = false, features = ["io-util"] }
simdutf8 = { version = "0.1", optional = true }
hyper = { version = "1.0", features = ["http1", "server", "client"], optional = true }
pin-project = { version = "1.1", optional = true }
base64 = { version = "0.21", optional = true }
sha1 = { version = "0.10", optional = true }
utf-8 = "0.7"
rand = "0.8"
thiserror = "1.0"

[features]
default = ["simd"]
simd = ["simdutf8/aarch64_neon"]
upgrade = ["hyper", "pin-project", "base64", "sha1"]
unstable-split = []

[dev-dependencies]
tokio = { version = "1.34", features = ["full", "macros"] }
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
hyper = { version = "1.0", features = ["http1", "server", "client"] }
assert2 = "0.3"
trybuild = "1.0"
criterion = "0.5"
anyhow = "1.0"
webpki-roots = "0.23"

[[bench]]
name = "unmask"
harness = false

# Build release with debug symbols: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.docs.rs]
features = ["upgrade"]
